# claudecode-bootstrap

./: .gitignore  README.md  create-rule.js  create-rule.test.js  cursor-rules.mdc  environment-variables.mdc  package-lock.json  package.json  postman-security.mdc  security-first.mdc  supabase-edge-functions.mdc
ainb-tui/: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOVER.md  LICENSE  install.sh  justfile  package-lock.json
ainb-tui/.github/workflows/: release.yml  visual-tests.yml
ainb-tui/Formula/: agents-box.rb  ainb.rb
ainb-tui/config/: README.md  example.config.toml  tmux.conf
ainb-tui/docker/agents-dev/: CLAUDE.md  Dockerfile  MCP_SERVERS.md  agents-dev.sh  test-docker-build.sh
ainb-tui/docs/: FAQ.md  mcp-socket-pooling.md
ainb-tui/docs/design/: home-screen-refresh-v2.md
ainb-tui/plans/: fix-tmux-clipboard.md
ainb-tui/research/: 2026-01-12_22-39-30_agent-deck-mcp-socket-pooling.md  2026-01-12_mcp-socket-pooling-implementation-plan.md
ainb-tui/scripts/: build-release.sh  record-demos.sh  test-isolated.sh
ainb-tui/src/: audit.rs  credentials.rs  editors.rs  lib.rs  main.rs
ainb-tui/src/agent_parsers/: claude_json.rs  mod.rs  plain_text.rs  types.rs
ainb-tui/src/app/: attach_handler.rs  events.rs  mod.rs  session_loader.rs  state.rs  state_tests.rs
ainb-tui/src/claude/: client.rs  mod.rs  streaming.rs  types.rs
ainb-tui/src/cli/: attach.rs  list.rs  logs.rs  mod.rs  run.rs  status.rs  util.rs
ainb-tui/src/components/: action_card.rs  agent_selection.rs  attached_terminal.rs  auth_provider_popup.rs  auth_setup.rs  changelog.rs  claude_chat.rs  config_popup.rs  config_screen.rs  confirmation_dialog.rs  fuzzy_file_finder.rs  git_view.rs  help.rs  home_screen.rs  home_screen_v2.rs  layout.rs  live_logs_stream.rs  log_formatter.rs  log_formatter_simple.rs  log_history_viewer.rs  log_parser.rs  log_reader.rs  log_writer.rs  logs_viewer.rs  mascot.rs  mod.rs  new_session.rs  session_list.rs  session_recovery.rs  setup_menu.rs  sidebar.rs  tmux_preview.rs  welcome_panel.rs
ainb-tui/src/config/: container.rs  mcp.rs  mcp_init.rs  mod.rs  onboarding.rs  presets.rs
ainb-tui/src/docker/: agents_dev.rs  agents_dev_tests.rs  builder.rs  container_manager.rs  log_streaming.rs  mod.rs  session_container.rs  session_lifecycle.rs  session_progress.rs
ainb-tui/src/git/: diff_analyzer.rs  mod.rs  operations.rs  remote_repo_manager.rs  repo_source.rs  repository.rs  workspace_scanner.rs  worktree_manager.rs
ainb-tui/tests/: E2E_TESTING.md  README.md  behavioral.rs  e2e_pty_tests.rs  interactive_mode_tests.rs  run_all_tests.sh  test-oauth.sh  test_app_state.rs  test_events.rs  test_manual_refresh.rs  test_session_creation_refresh.rs  test_session_model.rs  test_ui_display.rs  test_workspace_model.rs  ui_tests.rs
(+327 files in other folders)
